// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<CommentsLoop> when there are comments renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingBottom": 20,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <Text>
      Mock header
    </Text>
    <SectionList
      contentContainerStyle={
        Object {
          "paddingBottom": 40,
        }
      }
      data={Array []}
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={5}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      renderSectionHeader={[Function]}
      scrollEventThrottle={50}
      sections={
        Array [
          Object {
            "data": Array [
              Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/profile-pic-annon.png",
                  },
                  "id": "1235we",
                  "name": "May",
                },
                "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "discussionLevel": 1,
                "edited": false,
                "id": "21097",
                "isAuthorCurrentUser": false,
                "publishedAt": 2019-01-01T00:00:00.000Z,
                "replies": Array [
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "id": "1235we",
                      "name": "May",
                    },
                    "comment": Object {
                      "author": Object {
                        "avatarPath": Object {
                          "testUri": "../../../app/assets/images/profile-pic-annon.png",
                        },
                        "id": "1235we",
                        "name": "May",
                      },
                      "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                      "discussionLevel": 0,
                      "edited": false,
                      "id": "21097",
                      "isAuthorCurrentUser": false,
                      "publishedAt": 2019-01-01T00:00:00.000Z,
                      "replies": Array [],
                      "totalReplies": 0,
                    },
                    "content": "Nao.",
                    "edited": false,
                    "id": "21097",
                    "isAuthorCurrentUser": false,
                    "link": null,
                    "publishedAt": 2019-01-01T00:00:00.000Z,
                  },
                ],
                "title": "Meu pai fez o que ela mandou",
                "totalReplies": 1,
              },
            ],
            "level": 1,
          },
        ]
      }
      stickySectionHeadersEnabled={true}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </ScrollViewMock>
</View>
`;

exports[`Comments<CommentsLoop> when there are no comments renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingBottom": 20,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <Text>
      Mock header
    </Text>
    <NoContent
      text="There are no comments :("
    />
    <SectionList
      contentContainerStyle={
        Object {
          "paddingBottom": 40,
        }
      }
      data={Array []}
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={5}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      renderSectionHeader={[Function]}
      scrollEventThrottle={50}
      sections={Array []}
      stickySectionHeadersEnabled={true}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </ScrollViewMock>
</View>
`;
